--- a/index.html
+++ b/index.html
@@ -8,10 +8,15 @@
 </head>
 <body>
   <h1 class="title">TODOList</h1>
-  <form action="" id="form">
-    <input type="text" name="task" id="form-text" placeholder="NEW TASK">
+  <form action="" id="form-task">
+    <input type="text" name="task" id="form-task-input" placeholder="New Task">
     <input type="submit" value="ADD">
   </form>
+  <form action="" id="form-search">
+    <input type="text" name="task" id="form-search-input" placeholder="Search keyword">
+    <input type="submit" value="SEARCH">
+  </form>
+  <h2 class="list-title">リスト一覧</h2>
   <ul class="task-list">
   </ul>
   <script src="main.js"></script>
