一部修正・レスポンシブ対応

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>TODOList</title>
-  <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+JP:wght@400;600&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;500&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="csswipe.css">
   <link rel="stylesheet" href="style.css">
 </head>
@@ -13,16 +13,16 @@
     <header class="header">
       <h1 class="header__title">To Do List</h1>
       <div class="header__form-container">
-        <form action="" class="header__form js_form-task">
+        <form action="" class="header__form form-task js_form-task">
           <input type="text" name="task" class="header__form-input js_form-task-input" placeholder="Add Task">
         </form>
-        <form action="" class="header__form js_form-search">
+        <form action="" class="header__form form-search js_form-search">
           <input type="text" name="task" class="header__form-input js_form-search-input" placeholder="Search keyword">
         </form>
       </div>
     </header>
     <main class="main">
-      <h2 class="main__list-title js_list-title">リスト一覧</h2>
+      <h2 class="main__list-title js_list-title">タスク一覧</h2>
       <ul class="main__task-list js_task-list">
       </ul>
     </main>
