--- a/index.html
+++ b/index.html
@@ -14,9 +14,12 @@
       <h1 class="header__title">To Do List</h1>
       <div class="header__form-container">
         <form action="" class="header__form form-task js_form-task">
+          <p class="js_caution js_no-task display-none">タスクを入力してください</p>
+          <p class="js_caution js_duplicate display-none">登録済みのタスクです</p>
           <input type="text" name="task" class="header__form-input js_form-task-input" placeholder="Add Task">
         </form>
         <form action="" class="header__form form-search js_form-search">
+          <p class="js_caution js_no-keyword display-none">キーワードを入力してください</p>
           <input type="text" name="task" class="header__form-input js_form-search-input" placeholder="Search keyword">
         </form>
       </div>
